force-app/main/default/objects/Language_based_Ozonetel__c/Language_based_Ozonetel__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Lead creation from digital on the basis of language znd pushed to ozonetel dialers</description>
    <label>Language based Ozonetel</label>
</CustomObject>