force-app/main/default/objects/Language_based_Ozonetel__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>