force-app/main/default/objects/Language_based_Ozonetel__c/fields/ozonetel_outbound_campaign__c.field-meta.xml
<CustomField>
    <fullName>ozonetel_outbound_campaign__c</fullName>
    <label>ozonetel outbound campaign</label>
    <length>80</length>
    <type>Text</type>
</CustomField>