force-app/main/default/objects/Language_based_Ozonetel__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <length>80</length>
    <type>Text</type>
</CustomField>