force-app/main/default/objects/Language_based_Ozonetel__c/fields/skill__c.field-meta.xml
<CustomField>
    <fullName>skill__c</fullName>
    <label>skill</label>
    <length>80</length>
    <type>Text</type>
</CustomField>