force-app/main/default/objects/Language_based_Ozonetel__c/listViews/Detailed_View.listView-meta.xml
<ListView>
    <fullName>Detailed_View</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>ozonetel_outbound_campaign__c</columns>
    <columns>api_key__c</columns>
    <columns>Country__c</columns>
    <columns>Country_Code__c</columns>
    <columns>Language__c</columns>
    <columns>skill__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detailed View</label>
</ListView>